--- a/ScraperFullStackMVC/Views/Stocks/Index.cshtml
+++ b/ScraperFullStackMVC/Views/Stocks/Index.cshtml
@@ -1,78 +1,76 @@
-﻿@model IEnumerable<ScraperFullStackMVC.Models.Stock>
+﻿@model IEnumerable<ScraperFullStackMVC.Models.Stocks>
 
 @{
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Portfolio Page</h2>
+<h2>Index</h2>
 
-<p>This page houses your stock portfolio.</p>
-<p>Clicking the button below will run the scraper and update the portfolio. (Scraping may take a few moments)</p>
-@Html.ActionLink("Run Scraper", "Scrape", "Stocks", new { @class = "btn btn-primary", id = "scrapebtn" })
+<p>
+    @Html.ActionLink("Create New", "Create")
+</p>
+<table class="table">
+    <tr>
+        <th>
+            @Html.DisplayNameFor(model => model.symbol)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.price)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.change)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.pchange)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.currency)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.volume)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.marketcap)
+        </th>
+        <th>
+            @Html.DisplayNameFor(model => model.scrapetime)
+        </th>
+        <th></th>
+    </tr>
 
-
-@if (Model.Count() > 0)
-{
-    <p>Last scrape was: @Model.ToArray()[0].scrapetime</p>
-
-    <br />
-    
-    <table class="table">
-        <tr>
-            <th>Stock Symbol</th>
-            <th>Last Available Price</th>
-            <th>Change</th>
-            <th>% Change</th>
-            <th>Currency</th>
-            <th>Volume</th>
-            <th>Market Cap</th>
-            <th>Time of Scrape</th>
-        </tr>
-
-        @foreach (var item in Model)
-        {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.symbol)
-            </td>
-            <td>
-                $@Html.DisplayFor(modelItem => item.price)
-            </td>
-            <td>
-                $@Html.DisplayFor(modelItem => item.change)
-            </td>
-            <td>
-                %@Html.DisplayFor(modelItem => item.pchange)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.currency)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.volume)
-            </td>
-            <td>
-                $@Html.DisplayFor(modelItem => item.marketcap)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.scrapetime)
-            </td>
-            <td>
-                <form action="https://finance.yahoo.com/quote/@item.symbol" method="get">
-                    <button class="btn btn-dark">Details</button>
-                </form>
-            </td>
-        </tr>
-        }
-
-    </table>
-
+@foreach (var item in Model) {
+    <tr>
+        <td>
+            @Html.DisplayFor(modelItem => item.symbol)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.price)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.change)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.pchange)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.currency)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.volume)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.marketcap)
+        </td>
+        <td>
+            @Html.DisplayFor(modelItem => item.scrapetime)
+        </td>
+        <td>
+            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+        </td>
+    </tr>
 }
-else if (Model.Count() <= 0)
-{
-    <p>You have not run the scraper yet. Click the button below to retrieve your portfolio.</p>
-}
 
-    <script language="javascript" type="text/javascript">
-    document.getElementById("scrapebtn").addEventListener("mouseup", () => document.getElementById("myLoader").style.visibility = "visible");
-    </script>  
+</table>
