updated views csHTML

--- a/ScraperFullStackMVC/Views/Home/About.cshtml
+++ b/ScraperFullStackMVC/Views/Home/About.cshtml
@@ -1,7 +1,29 @@
 ﻿@{
     ViewBag.Title = "About";
 }
-<h2>@ViewBag.Title.</h2>
-<h3>@ViewBag.Message</h3>
 
-<p>Use this area to provide additional information.</p>
+<br /> 
+
+<h2>About This Project</h2>
+
+<br />
+
+<h4>Techologies Used To Create This Application</h4>
+
+<br />
+
+<h5>The Foundation</h5>
+<p>Visual Studio 2017</p>
+<p>ASP.NET Web Application --> MVC Template</p>
+
+<h5>The Storage and Storage Model</h5>
+<p>Microsoft SQL Server</p>
+<p>ADO.NET Entity Data Model</p>
+<p>Microsoft Entity Framework</p>
+
+<h5>Browser Automation and Data Retreival</h5>
+<p>Selenium.Webdriver</p>
+<p>Selenium.Webdriver.ChromeDriver</p>
+<p>Selenium.Support</p>
+
+
