--- a/ScraperFullStackMVC/Views/Stocks/Index.cshtml
+++ b/ScraperFullStackMVC/Views/Stocks/Index.cshtml
@@ -5,11 +5,18 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Index</h2>
+<h2>Portfolio Snapshots</h2>
+
+
+@Html.ActionLink("Scrape New Stock Data", "ScrapeYahoo", "Stocks")
+
 
 <p>
     @Html.ActionLink("Create New", "Create")
 </p>
+
+
+
 <table class="table">
     <tr>
         <th>
@@ -39,38 +46,43 @@
         <th></th>
     </tr>
 
-@foreach (var item in Model) {
-    <tr>
-        <td>
-            @Html.DisplayFor(modelItem => item.symbol)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.price)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.change)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.pchange)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.currency)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.volume)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.marketcap)
-        </td>
-        <td>
-            @Html.DisplayFor(modelItem => item.scrapetime)
-        </td>
-        <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-            @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-        </td>
-    </tr>
-}
+    @foreach (var item in Model)
+    {
+        <tr>
+            <td>
+                @Html.DisplayFor(modelItem => item.symbol)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.price)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.change)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.pchange)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.currency)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.volume)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.marketcap)
+            </td>
+            <td>
+                @Html.DisplayFor(modelItem => item.scrapetime)
+            </td>
+            <td>
+                @Html.ActionLink("Edit", "Edit", new { id = item.Id }) |
+                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
+                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+            </td>
+        </tr>
+    }
 
 </table>
+
+<script language="javascript" type="text/javascript">
+    document.getElementById("scrapebtn").addEventListener("mouseup", () => document.getElementById("myLoader").style.visibility = "visible");
+</script>
