--- a/ScraperFullStackMVC/Views/Stocks/Index.cshtml
+++ b/ScraperFullStackMVC/Views/Stocks/Index.cshtml
@@ -1,15 +1,23 @@
 ﻿@model IEnumerable<ScraperFullStackMVC.Models.Stocks>
 
 @{
+    /**/
+
     ViewBag.Title = "Index";
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
 <h2>Portfolio Snapshots</h2>
 
+@using (Html.BeginForm("Index", "Stocks", FormMethod.Get))
+{
+    <b> Stock Search: </b>
+    @Html.TextBox("Search") <input type="submit" name="submit" value="Search" />
+    <button>@Html.ActionLink("Clear Search Result", "Index")</button>
+}
+
 
 @Html.ActionLink("Scrape New Stock Data", "ScrapeYahoo", "Stocks")
-
 
 <table class="table">
     <tr>
@@ -68,10 +76,8 @@
                 @Html.DisplayFor(modelItem => item.scrapetime)
             </td>
             <td>
-                @Html.ActionLink("Details", "Details", new { id = item.Id }) |
-                @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                <button>@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
             </td>
         </tr>
     }
-
 </table>
