--- a/ScraperFullStackMVC/Views/Stocks/Index.cshtml
+++ b/ScraperFullStackMVC/Views/Stocks/Index.cshtml
@@ -7,17 +7,23 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<h2>Portfolio Snapshots</h2>
+<br />
+<h2 class="header">Portfolio Snapshots</h2>
+<br />
+
 
 @using (Html.BeginForm("Index", "Stocks", FormMethod.Get))
 {
     <b> Stock Search: </b>
-    @Html.TextBox("Search") <input type="submit" name="submit" value="Search" />
-    <button>@Html.ActionLink("Clear Search Result", "Index")</button>
+    @Html.TextBox("Search") <input type="submit" name="submit" value="Search" class="btn-default" />
+    <button class="btn-default">@Html.ActionLink("Clear Search Result", "Index")</button>
 }
 
+<br />
+<button class="btn-default btn-lg">@Html.ActionLink("Scrape New Stock Data", "ScrapeYahoo", "Stocks")</button>
+<br />
+<br />
 
-@Html.ActionLink("Scrape New Stock Data", "ScrapeYahoo", "Stocks")
 
 <table class="table">
     <tr>
@@ -76,7 +82,7 @@
                 @Html.DisplayFor(modelItem => item.scrapetime)
             </td>
             <td>
-                <button>@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
+                <button class="btn-default">@Html.ActionLink("Details", "Details", new { id = item.Id })</button>
             </td>
         </tr>
     }
