--- a/ScraperFullStackMVC/Views/Shared/_Layout.cshtml
+++ b/ScraperFullStackMVC/Views/Shared/_Layout.cshtml
@@ -13,7 +13,7 @@
         <nav class="navbar navbar-expand-sm navbar-dark fixed-top bg-dark">
             <div class="container">
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation"></button>
-                <a class="navbar-brand" href="/">The McScraper</a>
+                <a class="navbar-brand" href="/">gMX Pro</a>
                 <div class="navbar-collapse collapse" id="navbarSupportedContent">
                     <ul class="nav navbar-nav mr-auto">
                         <li class="nav-item"><a href="/" class="nav-link">Home</a></li>
